--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -281,6 +281,10 @@
     <Compile Include="Migrations\201408041759114_addedIncorrectPasswordTrialsToClient.Designer.cs">
       <DependentUpon>201408041759114_addedIncorrectPasswordTrialsToClient.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201408071155253_validationsAdded.cs" />
+    <Compile Include="Migrations\201408071155253_validationsAdded.Designer.cs">
+      <DependentUpon>201408071155253_validationsAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountModels.cs" />
@@ -363,6 +367,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201408041759114_addedIncorrectPasswordTrialsToClient.resx">
       <DependentUpon>201408041759114_addedIncorrectPasswordTrialsToClient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201408071155253_validationsAdded.resx">
+      <DependentUpon>201408071155253_validationsAdded.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Resource.uk-UA.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
